changes to html

--- a/app/templates/newmenuitem.html
+++ b/app/templates/newmenuitem.html
@@ -21,7 +21,7 @@
 </dl>
 
 
-<input type='submit' value='Edit'>
+<input type='submit' value='Create'>
 
 <a href = "{{url_for('showMenu',restaurant_id=restaurant.id)}}"> Cancel </a>
 </form>
